# doItC-algorithm

./: 01_Q10.c  01_Q14.c  01_Q15.c  01_Q18.c  01_Q5.c  01_Q8.c  02_Q01.c  02_Q02.c  02_Q04.c  02_Q05.c  02_Q09.c  02_Q11.c  03_Q1.c  03_Q3.c  03_Q4.c  CMakeLists.txt
01.Basic_Algorithm/Practice/: dbl_digits.c  max3.c  max3comb.c  med3.c  multi99table.c  print_right_isosceles_triangle.c  sign.c  sum_for.c  sum_for_pos.c  sum_while.c
01.Basic_Algorithm/Questions/: b_minus_a.c  gauss_sum.c  get_digit.c  max4.c  med3comb.c  min3.c  min4.c  multi99table.c  print_pyramid.c  print_rectangle.c  print_reverse_pyramid.c  print_right_isosceles_triangle.c  print_square.c  sum99table.c  sum_a_to_b.c  sum_for_print.c
02.Basic_DataStructure/Practice/: ary_max.c  ary_max_rand.c  card_conv.c  dayofyear.c  intary.c  intary_dynamic.c  intary_init.c  intdynamic.c  physical.c  prime.c  rev_ary.c
02.Basic_DataStructure/Question/: ary_avg.c  ary_copy.c  ary_max_rand.c  ary_min.c  ary_rcopy.c  ary_shuffle.c  ary_sum.c  date.c  physical.c  print_card_conv.c  rev_ary.c
Trial/: 01_Q11.c  01_Q12Q13.c  01_Q16.c  01_Q17.c  01_Q6.c  01_Q7.c  01_Q9.c  02_Q03.c  02_Q06.c  02_Q08.c  02_Q10.c  02_Q12.c  02_Q13.c  03_Q2.c  03_Q6.c
