cmake_minimum_required(VERSION 3.22)
project(doit_dsalgo_with_c)

set(CMAKE_C_STANDARD 99)

#add_executable(c_project 01_Q5.c)
#add_executable(c_project 01_Q6.c)
#add_executable(c_project 01_Q7.c)
#add_executable(c_project 01_Q8.c)
#add_executable(c_project 01_Q9.c)
#add_executable(c_project 01_Q10.c)
#add_executable(c_project 01_Q11.c)
#add_executable(c_project 01_Q12Q13.c)
#add_executable(c_project 01_Q14.c)
#add_executable(c_project 01_Q15.c)
#add_executable(c_project 01_Q16.c)
#add_executable(c_project 01_Q17.c)
#add_executable(c_project 01_Q18.c)
#add_executable(c_project 02_Q01.c)
#add_executable(c_project 02_Q02.c)
#add_executable(c_project 02_Q03.c)
#add_executable(c_project 02_Q04.c)
#add_executable(c_project 02_Q05.c)
#add_executable(c_project 02_Q06.c)
#add_executable(c_project 02_Q08.c)
#add_executable(c_project 02_Q09.c)
#add_executable(c_project 02_Q10.c)
#add_executable(c_project 02_Q11.c)
#add_executable(c_project 02_Q12.c)
#add_executable(c_project 02_Q13.c)
#add_executable(c_project 03_Q1.c)
#add_executable(c_project 03_Q2.c)
#add_executable(c_project 03_Q3.c)
#add_executable(c_project 03_Q4.c)
add_executable(c_project 03_Q6.c)